[package]
name = "pwrbit"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ch9120 = { path = "../ch9120" }
telegram = { path = "../telegram" }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = "1.1"
dns-protocol = { version = "0.1", default-features = false }
embassy-executor = { version = "0.10", features = [
  "executor-thread",
  "platform-cortex-m"
] }
embassy-futures = "0.1"
embassy-rp = { version = "0.10", features = ["rp2040", "time-driver"] }
embassy-sync = "0.8.0"
embassy-time = "0.5"
embedded-io-async = "0.7"
log = "0.4"
panic-probe = { version = "1", features = ["print-defmt"] }
portable-atomic = { version = "1", features = ["critical-section"] }
smart-leds = "0.4"
static_cell = "2.1"
