[package]
name = "telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-io-async = "0.7.0"
embedded-tls = { version = "0.18", default-features = false }
heapless = "0.9"
rand_core = "0.6"

[dev-dependencies]
embedded-io-adapters = { version = "0.7.0", features = ["tokio-1"] }
rand = "0.8"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
